--- a/Invessence/modules/web/src/main/webapp/pages/custody/uob/acctOpening.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/uob/acctOpening.xhtml
@@ -339,15 +339,16 @@
 
                                        </div>
                                        <div class="Container30 Responsive100 select_item">
-                                          <span class="title_line">Country Of Birth</span>
+                                          <div class="Container100"><span class="title_line">Country Of Birth</span></div>
                                           <!-- <input id="countbirth" name="countbirth" type="text" placeholder="Country of birth"/>
                                           <label for="countbirth">Country of birth</label> -->
+                                          <div class="Container100">
                                           <p:selectOneMenu id="jointconutry" value="Select Country Of Birth">
                                              <f:selectItem itemLabel="Select Country Of Birth" itemValue="" />
                                              <f:selectItem itemLabel="Singapore" itemValue="Singapore" />
                                              <f:selectItem itemLabel="Malaysia" itemValue="Malaysia" />
                                           </p:selectOneMenu>
-
+</div>
                                        </div>
                                     </div>
 
